// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Tag component renders correctly when tag is 'C' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="C"
  >
    C
  </span>
</div>
`;

exports[`Data Tag component renders correctly when tag is 'E' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="E"
  >
    E
  </span>
</div>
`;

exports[`Data Tag component renders correctly when tag is 'M' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="M"
  >
    M
  </span>
</div>
`;
